hao de you xi xiao guo ping guo biao shi zhe kuan you huo xing tan ce qi ji tai he jin zhi cheng de

--- a/date/2025-03/page-8.htm
+++ b/date/2025-03/page-8.htm
@@ -296,8 +296,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-67401.htm">动物诊疗许可证申领准备材料清单（动物诊疗许可证申领条件）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物诊疗许可证申领准备材料清单，以及动物诊疗许可证申领条件对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、开宠物店需要办理哪些手续?具..</p>
+                <h4><a href="/news/article-79379.htm">mysql5.7自动创建分区</a></h4>
+                <p>实现了下自动按月表分区，开发环境为Mysql 5.7.28 核心的两个存储过程： auto_create_partition为创建表分区，调用后为该表创建到下月结束的表分区。 auto_del_par</p>
             </div>
         </div>
     </div>
@@ -306,8 +306,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-15-free-v2ray-subscribe.htm">3月15日更新18.9M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、美国、日本、香港、新加坡等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-73267.htm">孕妇被猫抓伤出一丝丝血要***吗（孕妇被猫抓伤出一丝丝血要***吗有影响吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈孕妇被猫抓伤出一丝丝血要打针吗，以及孕妇被猫抓伤出一丝丝血要打针吗有影响吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、孕妇被小猫抓..</p>
             </div>
         </div>
     </div>
@@ -316,8 +316,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-78006.htm">C#自定义配置文件方法详解_在线工具</a></h4>
-                <p>.NET程序中，经常使用Config文件来配置应用程序中经常使用的值，比如数据库连接字符串。最近项目遇到一个需要配置好多节点在配置文件中的需求。为了使配置节点整洁易维护，在代码调用时也保证获取时比较直</p>
+                <h4><a href="/news/article-71945.htm">宠物粮厂家招聘最新信息（宠物粮基地）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈宠物粮厂家招聘最新信息，以及宠物粮基地对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、浙江宠物干粮生产厂家哪家好...        本篇</p>
             </div>
         </div>
     </div>
@@ -326,8 +326,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-11-clash-windows.htm">3月11日更新22.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、日本、香港、加拿大、欧洲、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-66141.htm">生产狗粮利润大吗（狗粮生产赚钱吗）</a></h4>
+                <p>摘要：       今天给各位分享生产狗粮利润大吗的知识，其中也会对狗粮生产赚钱吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、开个狗粮加工厂挣钱吗...  </p>
             </div>
         </div>
     </div>
@@ -336,8 +336,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-86457.htm">动物防疫计划书怎么写（动物防疫计划的编制）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物防疫计划书怎么写，以及动物防疫计划的编制对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、动物防疫工作个人总结报告...        </p>
+                <h4><a href="/news/article-75966.htm">违约养宠物还能退押金吗怎么处理（宠物店押金不退可以报警吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈违约养宠物还能退押金吗怎么处理，以及宠物店押金不退可以报警吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、领养宠物押金一年返还套路怎..</p>
             </div>
         </div>
     </div>
@@ -346,8 +346,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-7-free-node-subscribe.htm">3月7日更新22.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、加拿大、美国、新加坡、欧洲、日本、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-66770.htm">Nuxt3 rc.11 填坑 配置 element-plus</a></h4>
+                <p>网上各种版本都有，就是都不太行，不太完整。 先看下package.json {   "private": true,   "scripts": {     "build": "nuxt build",</p>
             </div>
         </div>
     </div>
@@ -356,18 +356,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-71946.htm">动物疫苗价格一览表图片高清大全下载 动物疫苗价格一览表图片高清大全下载</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗价格一览表图片高清大全下载的问题，于是小编就整理了2个相关介绍动物疫苗价格一览表图片高清大全下载的解答，让我们一起看看吧</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-70634.htm">深圳市领养宠物中心地址（深圳市领养宠物中心地址电话）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈深圳市领养宠物中心地址，以及深圳市领养宠物中心地址电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、深圳最大的宠物寄养中心在哪...  </p>
+                <h4><a href="/news/article-90080.htm">微服务nacos简单部署+网关设置+日志管理</a></h4>
+                <p>1.nacos简单部署 2.网关设置 3日志管理.   nacos引用的主要依赖是然后在配置文件进行注册（需要提前启动nacos插件，默认密码都是nacos）       &lt;dependency</p>
             </div>
         </div>
     </div>
@@ -386,8 +376,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-10-free-high-speed-nodes.htm">3月10日更新20.2M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、美国、韩国、欧洲、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-93048.htm">宠物品牌起名字大全（宠物品牌介绍）</a></h4>
+                <p>摘要：       今天给各位分享宠物品牌起名字大全的知识，其中也会对宠物品牌介绍进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店取什么名字好...   </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-80772.htm">十大冷门暴利生意(最挣钱没人干的行业有哪些?)（冷门生意有哪些十大冷门生意利润高）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈十大冷门暴利生意(最挣钱没人干的行业有哪些?)，以及冷门生意有哪些十大冷门生意利润高对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有..</p>
             </div>
         </div>
     </div>
@@ -398,7 +398,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
