--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -142,8 +142,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-9-node-share-links.htm">4月9日更新21.7M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、欧洲、新加坡、韩国、香港、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-4-12-node-share-links.htm">4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、韩国、香港、美国、新加坡、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -152,8 +152,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-26-node-share.htm">3月26日更新22.4M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、日本、香港、加拿大、新加坡、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-84291.htm">为啥家猫不需要打疫苗宠物猫要打呢（为什么猫不用打狂犬疫苗）</a></h4>
+                <p>摘要：       今天给各位分享为啥家猫不需要打疫苗宠物猫要打呢的知识，其中也会对为什么猫不用打狂犬疫苗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、为什.</p>
             </div>
         </div>
     </div>
@@ -162,8 +162,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-70634.htm">深圳市领养宠物中心地址（深圳市领养宠物中心地址电话）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈深圳市领养宠物中心地址，以及深圳市领养宠物中心地址电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、深圳最大的宠物寄养中心在哪...  </p>
+                <h4><a href="/news/article-80771.htm">STL之vector</a></h4>
+                <p>目录 vector概念 vector的遍历 1、[ ]的重载 2、迭代器 3、范围for vector的模拟实现 成员变量 reserve函数与拷贝构造 增删函数 push_back pop_back</p>
             </div>
         </div>
     </div>
@@ -172,8 +172,58 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-93802.htm">数据结构-图的遍历——DFS深度优先搜索_在线工具</a></h4>
-                <p>题目链接：https://www.dotcpp.com/oj/problem1702.html?sid=7509471&amp;lang=1#editor 模板题，dfs，dfs比bfs还简单，这个题</p>
+                <h4><a href="/free-nodes/2025-4-3-shadowrocket-node.htm">4月3日更新22.1M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、新加坡、美国、欧洲、日本、加拿大等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-82153.htm">宠物领养协议书范本最新版下载 宠物领养协议书范本最新版下载图片</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养协议书范本最新版下载的问题，于是小编就整理了4个相关介绍宠物领养协议书范本最新版下载的解答，让我们一起看看吧。宠物领养平</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-78692.htm">通州区宠物店（通州区宠物店电话）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈通州区宠物店，以及通州区宠物店电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物驯导师的职业概况2、...        本篇文章给</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-10-free-high-speed-nodes.htm">3月10日更新20.2M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、美国、韩国、欧洲、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-83588.htm">东北农业大学动物医学院研究生院（东北农大动物科学学院）</a></h4>
+                <p>摘要：       今天给各位分享东北农业大学动物医学院研究生院的知识，其中也会对东北农大动物科学学院进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、东北农业.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-96083.htm">天宫院附近宠物医院有哪些（天宫院附近有什么好玩的）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈天宫院附近宠物医院有哪些，以及天宫院附近有什么好玩的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常州宠物医院2、...        </p>
             </div>
         </div>
     </div>
@@ -188,63 +238,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-21-free-ssr-node.htm">3月21日更新19.6M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、日本、韩国、加拿大等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-78693.htm">动物疫控中心可以打疫苗吗多少钱（动物防疫中心可以打疫苗吗）</a></h4>
-                <p>摘要：       今天给各位分享动物疫控中心可以打疫苗吗多少钱的知识，其中也会对动物防疫中心可以打疫苗吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、给狗.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-23-free-shadowrocket-node.htm">3月23日更新19.5M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、韩国、美国、欧洲、香港、新加坡等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-18-free-high-speed-nodes.htm">3月18日更新22.9M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、香港、新加坡、欧洲、韩国、日本、加拿大等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-9-free-clash-subscribe.htm">3月9日更新18.9M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、欧洲、美国、香港等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
