--- a/index.html
+++ b/index.html
@@ -130,6 +130,40 @@
                     <div class="col-md-8">
                         <h3 class="title-big mb-sm-5 mb-4">最近更新</h3>
                         <div class="xcblog-blog-list">
+                                                        <div class="row xcblog-blog-item" data-date="2025-04-14">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2025-4-14-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2025-4-14-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        4月14日                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row xcblog-blog-item" data-date="2025-04-13">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2025-4-13-free-node-subscribe.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2025-4-13-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了日本、欧洲、香港、加拿大、韩国、美国、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        4月13日                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row xcblog-blog-item" data-date="2025-04-12">
                                 <div class="col-lg-4">
                                     <div class="position-relative">
@@ -436,40 +470,6 @@
                                         3月22日                                    </p>
                                 </div>
                             </div>
-                                                        <div class="row xcblog-blog-item" data-date="2025-03-21">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2025-3-21-free-ssr-node.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="3月21日更新19.6M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2025-3-21-free-ssr-node.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">3月21日更新19.6M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了香港、欧洲、新加坡、美国、日本、韩国、加拿大等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        3月21日                                    </p>
-                                </div>
-                            </div>
-                                                        <div class="row xcblog-blog-item" data-date="2025-03-20">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2025-3-20-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="3月20日更新20.9M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2025-3-20-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">3月20日更新20.9M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了香港、新加坡、韩国、欧洲、日本、美国、加拿大等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        3月20日                                    </p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-4 w3l-services">
@@ -478,8 +478,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-1-free-v2ray.htm">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-80073.htm">新手养猫入门必备攻略有哪些（新手养猫宝典）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈新手养猫入门必备攻略有哪些，以及新手养猫宝典对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新手养猫科普指南2、...        本篇</p>
             </div>
         </div>
     </div>
@@ -488,8 +488,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66141.htm">生产狗粮利润大吗（狗粮生产赚钱吗）</a></h4>
-                <p>摘要：       今天给各位分享生产狗粮利润大吗的知识，其中也会对狗粮生产赚钱吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、开个狗粮加工厂挣钱吗...  </p>
+                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -498,58 +498,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-68038.htm">动物疫苗的生产及检验 动物疫苗的生产及检验方法</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗的生产及检验的问题，于是小编就整理了3个相关介绍动物疫苗的生产及检验的解答，让我们一起看看吧。动物检疫合格证明需要查什么</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-16-free-ssr-node.htm">3月16日更新21.5M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、日本、加拿大、新加坡、香港、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-71287.htm">宠物粮品牌起名字大全集图片及价格（宠物粮品牌名称）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮品牌起名字大全集图片及价格，以及宠物粮品牌名称对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、世界十大顶级狗粮品牌...      </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-68681.htm">猫咪三针多久打完（猫咪三针多久打完有效）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫咪三针多久打完，以及猫咪三针多久打完有效对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打的三针疫苗是什么2、...        本</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-21-free-ssr-node.htm">3月21日更新19.6M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、日本、韩国、加拿大等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-89340.htm">合肥宠物救助站哪里有（合肥狗狗救助中心）</a></h4>
-                <p>摘要：       今天给各位分享合肥宠物救助站哪里有的知识，其中也会对合肥狗狗救助中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、合肥市流浪狗救助站是真.</p>
+                <h4><a href="/news/article-84290.htm">@NotEmpty、@NotBlank等注解的正确使用 @Validated和@Valid的区别 解决@NotBlank等注解不生效的问题 使用BindingResult进行接口请求参数的统一校验</a></h4>
+                <p>文章目录  1. 问题说明 2. 配置依赖 3. 编写注解的bean 4. 常用注解说明   4.1 空检查 4.2 布尔检查 4.3 长度检查 4.4 日期检查 4.5 数值检查   5. 编写co</p>
             </div>
         </div>
     </div>
@@ -568,8 +518,58 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87888.htm">成都宠物领养中心官网（成都宠物领养中心在哪）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈成都宠物领养中心官网，以及成都宠物领养中心在哪对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、启明小动物保护中心请问你们中心的具体地址..</p>
+                <h4><a href="/news/article-82152.htm">领养宠物用什么软件（领养宠物去什么平台比较好）</a></h4>
+                <p>摘要：       今天给各位分享领养宠物用什么软件的知识，其中也会对领养宠物去什么平台比较好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、如何在新版QQ空.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-8-clash-windows.htm">4月8日更新21.2M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、欧洲、美国、香港、新加坡、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-3-shadowrocket-node.htm">4月3日更新22.1M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、新加坡、美国、欧洲、日本、加拿大等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-73943.htm">家养2个月小猫咬出血要紧吗（2个月的猫咬出血要紧吗）</a></h4>
+                <p>摘要：       今天给各位分享家养2个月小猫咬出血要紧吗的知识，其中也会对2个月的猫咬出血要紧吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、被2个月小.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-93048.htm">宠物品牌起名字大全（宠物品牌介绍）</a></h4>
+                <p>摘要：       今天给各位分享宠物品牌起名字大全的知识，其中也会对宠物品牌介绍进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店取什么名字好...   </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-76652.htm">java中空指针异常情况以及解决办法</a></h4>
+                <p>概述： 出现空指针异常，常常是因为我们调用的对象是空的而抛出的异常。  问题描述： 第一种: 　out.println(request.getParameter("username"));   如果r</p>
             </div>
         </div>
     </div>
@@ -580,7 +580,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
