--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -114,6 +114,40 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-04-14">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-4-14-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-4-14-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月14日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-13">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-4-13-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-4-13-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了日本、欧洲、香港、加拿大、韩国、美国、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月13日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-04-12">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -250,40 +284,6 @@
                                 4月3日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-01">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月1日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-03-31">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-3-31-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="3月31日更新20.1M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-3-31-node-share-links.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">3月31日更新20.1M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、欧洲、新加坡、日本、韩国、香港、加拿大等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                3月31日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>            </div>
@@ -293,8 +293,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-78692.htm">通州区宠物店（通州区宠物店电话）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈通州区宠物店，以及通州区宠物店电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物驯导师的职业概况2、...        本篇文章给</p>
+                <h4><a href="/news/article-76652.htm">java中空指针异常情况以及解决办法</a></h4>
+                <p>概述： 出现空指针异常，常常是因为我们调用的对象是空的而抛出的异常。  问题描述： 第一种: 　out.println(request.getParameter("username"));   如果r</p>
             </div>
         </div>
     </div>
@@ -303,8 +303,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-80771.htm">STL之vector</a></h4>
-                <p>目录 vector概念 vector的遍历 1、[ ]的重载 2、迭代器 3、范围for vector的模拟实现 成员变量 reserve函数与拷贝构造 增删函数 push_back pop_back</p>
+                <h4><a href="/news/article-84291.htm">为啥家猫不需要打疫苗宠物猫要打呢（为什么猫不用打狂犬疫苗）</a></h4>
+                <p>摘要：       今天给各位分享为啥家猫不需要打疫苗宠物猫要打呢的知识，其中也会对为什么猫不用打狂犬疫苗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、为什.</p>
             </div>
         </div>
     </div>
@@ -313,8 +313,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
+                <h4><a href="/free-nodes/2025-3-16-free-ssr-node.htm">3月16日更新21.5M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、日本、加拿大、新加坡、香港、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -323,8 +323,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-82153.htm">宠物领养协议书范本最新版下载 宠物领养协议书范本最新版下载图片</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养协议书范本最新版下载的问题，于是小编就整理了4个相关介绍宠物领养协议书范本最新版下载的解答，让我们一起看看吧。宠物领养平</p>
+                <h4><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm">3月13日更新18.5M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、欧洲、香港、新加坡、加拿大、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -333,8 +333,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-70634.htm">深圳市领养宠物中心地址（深圳市领养宠物中心地址电话）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈深圳市领养宠物中心地址，以及深圳市领养宠物中心地址电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、深圳最大的宠物寄养中心在哪...  </p>
+                <h4><a href="/news/article-81478.htm">梦到抱着别的女人亲热是什么意思啊（梦中抱着别的女人）</a></h4>
+                <p>摘要：       今天给各位分享梦到抱着别的女人亲热是什么意思啊的知识，其中也会对梦中抱着别的女人进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、梦见亲吻别.</p>
             </div>
         </div>
     </div>
@@ -343,8 +343,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66771.htm">动物接种疫苗后多久产生特异性抗体? 动物接种疫苗后多久产生特异性抗体呢</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物接种疫苗后多久产生特异性抗体?的问题，于是小编就整理了2个相关介绍动物接种疫苗后多久产生特异性抗体?的解答，让我们一起看看吧</p>
+                <h4><a href="/news/article-77321.htm">动物疫病防控工作总结（动物疫病防疫工作）</a></h4>
+                <p>摘要：       今天给各位分享动物疫病防控工作总结的知识，其中也会对动物疫病防疫工作进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、动物防疫工作自我总结..</p>
             </div>
         </div>
     </div>
@@ -353,8 +353,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-92322.htm">关于Mina中IoBuffer与Java NIO中ByteBufferde的使用</a></h4>
-                <p>项目中大量的使用&nbsp;NIO&nbsp;和&nbsp;Mina，虽然之前一直对这部分比较关注，但是还没有好好的总结一下这方面的内容，本节内容介绍一下NIO&nbsp;里最基本的一个类&nbsp;</p>
+                <h4><a href="/news/article-96083.htm">天宫院附近宠物医院有哪些（天宫院附近有什么好玩的）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈天宫院附近宠物医院有哪些，以及天宫院附近有什么好玩的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常州宠物医院2、...        </p>
             </div>
         </div>
     </div>
@@ -363,8 +363,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-84290.htm">@NotEmpty、@NotBlank等注解的正确使用 @Validated和@Valid的区别 解决@NotBlank等注解不生效的问题 使用BindingResult进行接口请求参数的统一校验</a></h4>
-                <p>文章目录  1. 问题说明 2. 配置依赖 3. 编写注解的bean 4. 常用注解说明   4.1 空检查 4.2 布尔检查 4.3 长度检查 4.4 日期检查 4.5 数值检查   5. 编写co</p>
+                <h4><a href="/news/article-78005.htm">原生实现C#和Lua相互调用-Unity3D可用</a></h4>
+                <p>引言 &nbsp;&nbsp;&nbsp;&nbsp;本篇简单介绍如何在C#中执行Lua脚本，传递数据到Lua中使用，以及Lua中调用C#导出的方法等。在Unity中开发测试，并打IL2CPP的And</p>
             </div>
         </div>
     </div>
@@ -373,8 +373,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87887.htm">开宠物店狗粮怎么进货呢（开宠物店狗粮怎么进货呢视频）</a></h4>
-                <p>摘要：       今天给各位分享开宠物店狗粮怎么进货呢的知识，其中也会对开宠物店狗粮怎么进货呢视频进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗粮哪里买.</p>
+                <h4><a href="/free-nodes/2025-3-23-free-shadowrocket-node.htm">3月23日更新19.5M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、韩国、美国、欧洲、香港、新加坡等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -383,8 +383,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66142.htm">美联众合动物医院美容价格 美联众合动物医院价目表</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于美联众合动物医院美容价格的问题，于是小编就整理了4个相关介绍美联众合动物医院美容价格的解答，让我们一起看看吧。太原市的宠物医院哪</p>
+                <h4><a href="/news/article-91573.htm">成都动物疫苗接种点 成都动物疫苗接种点查询</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于成都动物疫苗接种点的问题，于是小编就整理了3个相关介绍成都动物疫苗接种点的解答，让我们一起看看吧。成都哪有给宠物办理检疫证的地方</p>
             </div>
         </div>
     </div>
@@ -395,7 +395,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
