--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -113,21 +113,21 @@
                                         <p>这次的更新跨足了美国、新加坡、加拿大、日本、欧洲、韩国、香港等多个地区，节点覆盖广泛，最高速度可达18.3 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p>
                     <p>&nbsp;</p>
 
-                                        <h3>高速机场推荐1【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
+                                        <h3>高速机场推荐1【<a href="javascript:;" class="js_to" data-url="https://168.138.167.139/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="color:red;">星辰机场</a>】</h3>
+                    <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+
+
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://168.138.167.139/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
+
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
                     <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">农夫山泉（点击注册）</a>】</p>
-
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://146.235.19.94/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="color:red;">西游云</a>】</h3>
-                    <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
-IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
-
-
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://146.235.19.94/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">西游云（点击注册）</a>】</p>
 
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red;">狗狗加速</a>】</h3>
                     <p>狗狗加速作为第一家上线Hysteria1协议的机场，目前已经全面上线Hysteria2协议；不同于hy1，hy2全面优化了链接速度(0-RTT)，进一步降低延迟；同时使用全新的带宽控制方式；能发挥您带宽的最大潜能！全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
@@ -145,101 +145,11 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                     <p><strong>sing-box订阅链接</strong></p>
                     <div class="xcblog-singbox-box"></div>
                     <p>&nbsp;</p>
-                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-code="j5kX2iZI" rel="nofollow noopener" style="color:#c00;">闲鱼网络</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
+                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-code="2gL62wdk" rel="nofollow noopener" style="color:#c00;">可乐云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
                 </div>
             </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-17-free-node-subscribe.htm">3月17日更新20.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、美国、欧洲、日本、韩国、加拿大等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-88624.htm">东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）</a></h4>
-                <p>摘要：       今天给各位分享东北农大动物医院价目表查询的知识，其中也会对东北农大动物医院价目表查询最新进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、农.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-80073.htm">新手养猫入门必备攻略有哪些（新手养猫宝典）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈新手养猫入门必备攻略有哪些，以及新手养猫宝典对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新手养猫科普指南2、...        本篇</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-78006.htm">C#自定义配置文件方法详解_在线工具</a></h4>
-                <p>.NET程序中，经常使用Config文件来配置应用程序中经常使用的值，比如数据库连接字符串。最近项目遇到一个需要配置好多节点在配置文件中的需求。为了使配置节点整洁易维护，在代码调用时也保证获取时比较直</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-85728.htm">和田宠物医院污水处理价格多少（宠物店污水处理设备）</a></h4>
-                <p>摘要：       今天给各位分享和田宠物医院污水处理价格多少的知识，其中也会对宠物店污水处理设备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物医院未配.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-69329.htm">24小时宠物医院咨询电话临平（临平宠物店）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈24小时宠物医院咨询电话临平，以及临平宠物店对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物医生怎么咨询.2、...        本</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-75287.htm">北京宠物医院前十名一朝阳区宠爱医院（北京朝阳区宠物医院哪个好）</a></h4>
-                <p>摘要：       今天给各位分享北京宠物医院前十名一朝阳区宠爱医院的知识，其中也会对北京朝阳区宠物医院哪个好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-89339.htm">动物疫苗使用方法（动物疫苗接种方法有哪些）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗使用方法，以及动物疫苗接种方法有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗怎么打2、...        本篇文</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-3-clash-windows.htm">3月3日更新20.5M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、美国、欧洲、新加坡等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -250,13 +160,103 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         </div>
     </div>
 </div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-12-node-share-links.htm">4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、韩国、香港、美国、新加坡、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-82873.htm">动物疫苗接种方法及注意事项有哪些呢图片大全（动物疫苗接种方式）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗接种方法及注意事项有哪些呢图片大全的知识，其中也会对动物疫苗接种方式进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-69977.htm">动物疫苗的保管与使用 动物疫苗的保管与使用实验报告</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗的保管与使用的问题，于是小编就整理了4个相关介绍动物疫苗的保管与使用的解答，让我们一起看看吧。宠物疫苗如何保存与运输？宠</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-83588.htm">东北农业大学动物医学院研究生院（东北农大动物科学学院）</a></h4>
+                <p>摘要：       今天给各位分享东北农业大学动物医学院研究生院的知识，其中也会对东北农大动物科学学院进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、东北农业.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-15-free-v2ray-subscribe.htm">3月15日更新18.9M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、美国、日本、香港、新加坡等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-94562.htm">中文时间日期解析错误-UnicodeEncodeError: &#8216;locale&#8217; codec can&#8217;t encode character &#8216;\u5e74&#8217; in position 2: Illegal</a></h4>
+                <p>参考：https://segmentfault.com/q/1010000003070325 &nbsp; &nbsp; &nbsp; &nbsp;word = (datetime.today() +</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-74610.htm">vue中npm run dev 报错（eslint规则）</a></h4>
+                <p>1.报错了。。。 You may use special comments to disable some warnings. Use // eslint-disable-next-line to i</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-73944.htm">长沙领养宠物猫在哪里领（长沙领养宠物猫在哪里领养）</a></h4>
+                <p>摘要：       今天给各位分享长沙领养宠物猫在哪里领的知识，其中也会对长沙领养宠物猫在哪里领养进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、在哪里可以领.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-96083.htm">天宫院附近宠物医院有哪些（天宫院附近有什么好玩的）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈天宫院附近宠物医院有哪些，以及天宫院附近有什么好玩的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常州宠物医院2、...        </p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
