--- a/privacy.htm
+++ b/privacy.htm
@@ -166,8 +166,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-17-free-node-subscribe.htm">3月17日更新20.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、美国、欧洲、日本、韩国、加拿大等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-73267.htm">孕妇被猫抓伤出一丝丝血要***吗（孕妇被猫抓伤出一丝丝血要***吗有影响吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈孕妇被猫抓伤出一丝丝血要打针吗，以及孕妇被猫抓伤出一丝丝血要打针吗有影响吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、孕妇被小猫抓..</p>
             </div>
         </div>
     </div>
@@ -176,8 +176,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-84290.htm">@NotEmpty、@NotBlank等注解的正确使用 @Validated和@Valid的区别 解决@NotBlank等注解不生效的问题 使用BindingResult进行接口请求参数的统一校验</a></h4>
-                <p>文章目录  1. 问题说明 2. 配置依赖 3. 编写注解的bean 4. 常用注解说明   4.1 空检查 4.2 布尔检查 4.3 长度检查 4.4 日期检查 4.5 数值检查   5. 编写co</p>
+                <h4><a href="/news/article-76655.htm">vue2.x版本中computed和watch的使用入门详解-关联和区别_在线工具</a></h4>
+                <p>前面两篇介绍了computed和watch的基本使用   watch篇 computed篇  两者的区别，继续通过代码实现的方式具体去了解 html &lt;li&gt;最开始的value值：{{ n</p>
             </div>
         </div>
     </div>
@@ -186,8 +186,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-90080.htm">微服务nacos简单部署+网关设置+日志管理</a></h4>
-                <p>1.nacos简单部署 2.网关设置 3日志管理.   nacos引用的主要依赖是然后在配置文件进行注册（需要提前启动nacos插件，默认密码都是nacos）       &lt;dependency</p>
+                <h4><a href="/news/article-93802.htm">数据结构-图的遍历——DFS深度优先搜索_在线工具</a></h4>
+                <p>题目链接：https://www.dotcpp.com/oj/problem1702.html?sid=7509471&amp;lang=1#editor 模板题，dfs，dfs比bfs还简单，这个题</p>
             </div>
         </div>
     </div>
@@ -196,8 +196,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-74610.htm">vue中npm run dev 报错（eslint规则）</a></h4>
-                <p>1.报错了。。。 You may use special comments to disable some warnings. Use // eslint-disable-next-line to i</p>
+                <h4><a href="/news/article-87163.htm">Java ArrayList集合(Java动态数组)</a></h4>
+                <p>Java ArrayList集合（Java动态数组）  一、ArrayList集合的概述和基本使用   1.概述 2.基本使用   二、ArrayList集合的详细介绍   1.定义一个ArrayLi</p>
             </div>
         </div>
     </div>
@@ -206,8 +206,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66770.htm">Nuxt3 rc.11 填坑 配置 element-plus</a></h4>
-                <p>网上各种版本都有，就是都不太行，不太完整。 先看下package.json {   "private": true,   "scripts": {     "build": "nuxt build",</p>
+                <h4><a href="/free-nodes/2025-3-24-free-node-subscribe.htm">3月24日更新21M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、香港、日本、欧洲、加拿大、韩国、美国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm">3月27日更新19.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、欧洲、香港、日本、新加坡、加拿大等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -226,8 +236,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-75286.htm">宠物鲜粮市场规模分析报告（宠物粮食市场）</a></h4>
-                <p>摘要：       今天给各位分享宠物鲜粮市场规模分析报告的知识，其中也会对宠物粮食市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物的用品市场分析?..</p>
+                <h4><a href="/free-nodes/2025-3-12-free-subscribe-node.htm">3月12日更新20.9M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、欧洲、韩国、新加坡、加拿大、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -236,8 +246,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-90081.htm">请多多无货源店怎么开（拼多多无货源店怎么开）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈请多多无货源店怎么开，以及拼多多无货源店怎么开对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、拼多多怎么做无货源店铺...        </p>
+                <h4><a href="/free-nodes/2025-3-7-free-node-subscribe.htm">3月7日更新22.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、新加坡、欧洲、日本、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -246,18 +256,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-77321.htm">动物疫病防控工作总结（动物疫病防疫工作）</a></h4>
-                <p>摘要：       今天给各位分享动物疫病防控工作总结的知识，其中也会对动物疫病防疫工作进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、动物防疫工作自我总结..</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-3-clash-windows.htm">3月3日更新20.5M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、美国、欧洲、新加坡等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -268,7 +268,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
